--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,11 @@ python = "^3.8"
 pystac = "^1.2.0"
 jupyterlab = "^3.2.4"
 rasterio = "^1.2.10"
+stackstac = "^0.2.2"
+pystac-client = "^0.3.1"
+planetary-computer = "^0.4.4"
+xarray-spatial = "^0.3.0"
+dask-gateway = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
