--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pystac-client = "^0.3.1"
 planetary-computer = "^0.4.4"
 xarray-spatial = "^0.3.0"
 dask-gateway = "^0.9.0"
+Shapely = "^1.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
